ops/deployment/k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: udi-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  rules:
    - host: udi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: udi-api
                port:
                  number: 8000
